--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  
+    "engines": {
+      "node": ">= 18 < 19"
+    },
+  
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
